# FFXIV-RaidCompletion

./: Cargo.toml  README.md
.github/workflows/: rust.yml
data/: config.data  dungeons.data  raids.data  trials.data
src/: content.rs  fetch.rs  main.rs  player.rs  ui.rs
src/css/: main.css
