[package]
name = "ffxiv-raidcompletion"
version = "1.1.0"
edition = "2021"
description = """
A fast & lightweight tool that allows you to track your endgame progress in Final Fantasy 14 Online
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.166", features = ["derive"]} 
tokio = { version = "1.29.1", features = ["full"]}  
winapi = {version = "0.3", features = ["wincon", "winuser"]}
lazy_static = "1.4.0"

[package.metadata.bundle]
name = "FFXIV - Raid Completion"
identifier = "dev.dubsky"
version = "1.0.0"
copyright = "Copyright (c) DubskySteam 2023. All rights reserved."
short_description = "FFXIV Achievement Tracker"
long_description = """
A fast & lightweight tool that allows you to track your endgame progress in Final Fantasy 14 Online
"""
